Added detail pages

--- a/design/user-interface/reactions-detail-3.html
+++ b/design/user-interface/reactions-detail-3.html
@@ -42,20 +42,25 @@
 </nav>
 </div>
 <div class="container-fluid" style="max-width:1024px;padding:0px 24px 0px 24px;">
-  <div class="row"> <img src="images/reactions.png" class="img-responsive" alt="reactions banner image">
-    <h3>Search for Adverse Reactions</h3>
-    <!-- /row --> 
+  <div class="row"> <img src="images/reactions.png" class="img-responsive" alt="drugs banner image">
+    <h3>Reactions Detail Three</h3>
+  <ul class="nav nav-tabs">
+  <li role="presentation"><a href="reactions-detail.html">Reactions Detail One</a></li>
+  <li role="presentation"><a href="reactions-detail-2.html">Reactions Detail Two</a></li>
+  <li role="presentation" class="active"><a href="reactions-detail-3.html">Reactions Detail Three</a></li>
+</ul>
+ <!-- /row --> 
   </div>
-  <div class="row" style="padding:24px;">
+ <!-- <div class="row" style="padding:24px;">
     <div class="col-md-6">
       <div class="input-group">
         <input type="text-left" class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-        <a href="reactions-detail.html" <button class="btn btn-default" type="button">Go!</a></button>
+        <button class="btn btn-default" type="button">Go!</button>
         </span> </div>
     </div>
   </div>
-</div>
+</div>-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
