--- a/design/user-interface/enforceable-detail-2.html
+++ b/design/user-interface/enforceable-detail-2.html
@@ -33,8 +33,8 @@
   <div id="bs-example-navbar-collapse-9" class="collapse navbar-collapse">
     <ul class="nav navbar-nav">
       <li> <a href="drugs.html">Drug Names</a> </li>
-      <li class="active"> <a href="reactions.html">Adverse Reactions</a> </li>
-      <li> <a href="enforceable.html">Enforceable Actions</a> </li>
+      <li> <a href="reactions.html">Adverse Reactions</a> </li>
+      <li class="active"> <a href="enforceable.html">Enforceable Actions</a> </li>
       <!--<li> <a href="manufacturers.html">Drug Manufacturers</a> </li>-->
     </ul>
   </div>
@@ -42,20 +42,25 @@
 </nav>
 </div>
 <div class="container-fluid" style="max-width:1024px;padding:0px 24px 0px 24px;">
-  <div class="row"> <img src="images/reactions.png" class="img-responsive" alt="reactions banner image">
-    <h3>Search for Adverse Reactions</h3>
-    <!-- /row --> 
+  <div class="row"> <img src="images/enforceable.png" class="img-responsive" alt="drugs banner image">
+    <h3>Enforceable Detail Two</h3>
+  <ul class="nav nav-tabs">
+  <li role="presentation"><a href="enforceable-detail.html">Enforceable Detail One</a></li>
+  <li role="presentation" class="active"><a href="enforceable-detail-2.html">Enforceable Detail Two</a></li>
+  <li role="presentation"><a href="enforceable-detail-3.html">Enforceable Detail Three</a></li>
+</ul>
+ <!-- /row --> 
   </div>
-  <div class="row" style="padding:24px;">
+ <!-- <div class="row" style="padding:24px;">
     <div class="col-md-6">
       <div class="input-group">
         <input type="text-left" class="form-control" placeholder="Search for...">
         <span class="input-group-btn">
-        <a href="reactions-detail.html" <button class="btn btn-default" type="button">Go!</a></button>
+        <button class="btn btn-default" type="button">Go!</button>
         </span> </div>
     </div>
   </div>
-</div>
+</div>-->
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) --> 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script> 
